@@ -1,4 +1,14 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 06 Feb 2019 Released 2.5.2 version
+* Fix test case for selecting non existing candidates for Fedora rawhide
+* Update UnicodeData.txt to current Unicode 12.0 draft
+* Update emoji data to Unicode 12.0 final for 2019
+* Update emoji annotations from CLDR
+* Initialize self.dictionary_sub_properties_prop_list = [] in self._init_properties() (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/46)
+* Fix test case for case mode change
+* Improve filter for dictionary selection if langtable available
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 29 Jan 2019 Released 2.5.1 version
 * Update translations from zanata (de, ja, fr, pl updated)
 * Show also dictionary when “Show status in auxiliary text” is on
